2008-06-30  Neil Roberts  <neil@o-hand.com>

	Bug 985 - MSC math.h / M_PI issue

	* clutter/cogl/gl/cogl.c (set_clip_plane): 
	* clutter/clutter-alpha.c (sinc_func): Use G_PI instead of M_PI
	because M_PI isn't defined in MSVC without a special
	#define. Thanks to Haakon Sporsheim

2008-06-30  Neil Roberts  <neil@o-hand.com>

	* clutter/win32/clutter-backend-win32.c (check_vblank_env): Use
	g_ascii_strcasecmp instead of strcasecmp because strcasecmp isn't
	available in MSVC.

2008-06-30  Matthew Allum  <mallum@openedhand.com>

         Bug 1007 - Fix TFP fallback mechanism

	* clutter/glx/clutter-glx-texture-pixmap.c:
	* clutter/x11/clutter-x11-texture-pixmap.c:
        Add some extra safety to glx pixmap creations and tidy up some notes.
        Patch from Gwenole Beauchesne.

2008-06-30  Neil Roberts  <neil@o-hand.com>

        * clutter/x11/clutter-event-x11.c:
        * clutter/win32/clutter-event-win32.c: Use the HAVE_CONFIG_H guard
        around #include "config.h"

2008-06-30  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/Makefile.am:
	* clutter/eglx/Makefile.am:
	* clutter/glx/Makefile.am: Build the X11 base backend before
	the backends that depend on it.

2008-06-30  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug 1000 - clutter-x11 should define gtypes for its enumerations

	* clutter/x11/Makefile.am:
	* clutter/x11/clutter-event-x11.c:
	* clutter/x11/clutter-x11-enum-types.c.in:
	* clutter/x11/clutter-x11-enum-types.h.in:
	* clutter/x11/clutter-x11.h: Add the GTypes for the X11-specific
	enumerations, so that they can be used by the bindings. (Andy
	Wingo)

2008-06-30  Chris Lord  <chris@openedhand.com>

	* tests/test-shader.c:
	Fix edge-detect shader on ATI, thanks Gwenole Beauchesne

2008-06-30  Matthew Allum  <mallum@openedhand.com>

        Bug 997 - automatic updates not working for named TFP pixmaps, 
                  at least in x11    

	* clutter/glx/clutter-glx-texture-pixmap.c:
	* clutter/glx/clutter-glx-texture-pixmap.h: